--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,27 @@ body {
     overflow: hidden;
 }
 
+ul{
+    margin:0;
+    padding:0;
+}
+
+.button_1{
+    height: 38px;
+    background:#e8491d;
+    border: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: #ffffff;
+}
+
+.dark{
+    padding: 15px;
+    background: #35424a;
+    color: #ffffff;
+    margin: 10px 0;
+}
+
 /* Header **/
 header {
     background: #35424a;
@@ -54,4 +75,88 @@ header ul {
  header .highlight, header .current a {
      color: #e8491d;
      font-weight: bold;
+ }
+
+ header a:hover{
+     color: #cccccc;
+     font-weight: bold;
+ }
+
+ /* showcase */
+ #showcase{
+     min-height: 400px;
+     background: linear-gradient(
+         rgba(0,0,0, 0.7),
+         rgba(0,0,0, 0.7)
+     ), url('https://images.unsplash.com/photo-1532347231146-80afc9e3df2b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=632&q=80') no-repeat 
+     center;
+     background-size: cover;
+     text-align: center;
+     color: #ffffff;
+ }
+
+ #showcase h1{
+     margin-top: 100px;
+     font-size: 55px;
+     margin-bottom: 10px;
+ }
+
+ #showcase p{
+     font-size: 20px;
+ }
+
+ #newsletter{
+     padding: 15px;
+     color: #ffffff;
+     background: #35424a;
+ }
+
+ #newsletter h1{
+     float: left;
+ }
+
+ #newsletter form{
+     float: right;
+     margin-top:15px ;
+ }
+
+ #newsletter input[type="email"]{
+     padding: 4px;
+     height: 25px;
+     width: 250px;
+ }
+
+ /* boxes */
+ #boxes{
+     margin-top: 20px;
+ }
+
+ #boxes .box{
+     float: left;
+     text-align: center;
+     width: 30%;
+     padding: 10px;
+ }
+
+ .box img{
+     width: 350px;
+ }
+
+aside#sidebar{
+    float: right;
+    width: 30%;
+    margin-top: 10px;
+}
+
+article#main-col{
+    float: left;
+    width: 65%;
+}
+
+ footer{
+     padding: 20px;
+     margin-top: 20px;
+     color: #ffffff;
+     background-color: #e8491d;
+     text-align: center;
  }
